--- a/W01Exercise/Answer.tex
+++ b/W01Exercise/Answer.tex
@@ -4,9 +4,9 @@
 \documentclass[english, nochinese]{pnote}
 \usepackage[paper, safebm]{pdef}
 
-\title{Answer to Exercises (Week 01)}
+\title{Answers to Exercises (Week 01)}
 \author{Zhihan Li}
-\date{September 18, 2018}
+\date{September 19, 2018}
 
 \begin{document}
 
