--- a/L11Exercise/Answer.tex
+++ b/L11Exercise/Answer.tex
@@ -3,7 +3,7 @@
 %! TeX program = LuaLaTeX
 
 \documentclass[english, nochinese]{pnote}
-\usepackage[paper]{pdef}
+\usepackage[paper, cgu]{pdef}
 
 \title{Answers to Exercises (Lecture 11)}
 \author{Zhihan Li, 1600010653}
