--- a/P05Wave/Report.tex
+++ b/P05Wave/Report.tex
@@ -128,7 +128,7 @@ where $\phi$ is a function of period $2$.
 
 \subsection{Initial condition}
 
-We proceed to simplify the model for brevity by assume $ v^0 \rbr{x} = \rbr{u^0}' \rbr{x} $. This leads to more intuitive analytical solution: a wave packet in $ \sbr{ 0, 1 } $ starts travelling to the right in the beginning. It gets inverted at $ x = 1 $ and travels to the left then. It gets reflected at $ x = 0 $ afterwards. Mathematically, the solution is determined by \eqref{Eq:Split} with
+We proceed to simplify the model for brevity by assume $ v^0 \rbr{x} = -\rbr{u^0}' \rbr{x} $. This leads to more intuitive analytical solution: a wave packet in $ \sbr{ 0, 1 } $ starts travelling to the right in the beginning. It gets inverted at $ x = 1 $ and travels to the left then. It gets reflected at $ x = 0 $ afterwards. Mathematically, the solution is determined by \eqref{Eq:Split} with
 \begin{equation}
 \phi \rbr{x} =
 \begin{cases}
@@ -136,7 +136,7 @@ u^0 \rbr{x}, & x \in \sbr{ 0, 1 }; \\
 0, & x \in \sbr{ 1, 2 }
 \end{cases}
 \end{equation}
-and period $2$. The solution itself is periodic with respect to $t$ with period $2$.
+and period $2$. The solution $u$ itself is periodic with respect to $t$ with period $4$.
 
 The first set we choose is
 \begin{equation}
