--- a/L17Exercise/Answer.tex
+++ b/L17Exercise/Answer.tex
@@ -43,7 +43,7 @@ We note that $ \norm{ u - u_{\rbr{h}} } $ heavily relies on the well-posedness o
 we deduce $ \hat{\Pi} : C \sbr{ 0, 1 } \rightarrow P_1 \sbr{ 0, 1 } $ is bounded. Therefore $ I - \hat{\Pi} $ is bounded. Since $ H^1 \sbr{ 0, 1 } \hookrightarrow C \sbr{ 0, 1 } $ and $ L^{\infty} \sbr{ 0, 1 } \hookrightarrow L^2 \sbr{ 0, 1 } $, we deduce $ I - \hat{\Pi} : H^1 \sbr{ 0, 1 } \rightarrow L^2 \sbr{ 0, 1 } $ is bounded.
 \hfill$\Box$
 
-\textbf{Problem 3. (Page 261 Exercise 4)} \textit{Proof.} We define $ F : \sbr{ 0, 1 } \rightarrow = \sbr{ x_i, x_{ i + 1 } }, \hat{x} \mapsto x_i + \rbr{ x_{ i + 1 } - x_i } x $. We then define $ \hat{u} = F^{\text{t}} u = u \circ F \in H^2 \sbr{ 0, 1 } $ to be the function on standard element $ \sbr{ 0, 1 } $ and $\hat{\Pi}$ the interpolation function on standard element such that
+\textbf{Problem 3. (Page 261 Exercise 4)} \textit{Proof.} We define $ F : \sbr{ 0, 1 } \rightarrow I_i = \sbr{ x_i, x_{ i + 1 } }, \hat{x} \mapsto x_i + \rbr{ x_{ i + 1 } - x_i } x $. We then define $ \hat{u} = F^{\text{t}} u = u \circ F \in H^2 \sbr{ 0, 1 } $ to be the function on standard element $ \sbr{ 0, 1 } $ and $\hat{\Pi}$ the interpolation function on standard element such that
 \begin{equation}
 \begin{tikzcd}
 H^2 \sbr{ x_i, x_{ i + 1 } } \arrow[r, "\Pi"] \arrow[d, "F^{\text{t}}"'] & P_1 \sbr{ x_i, x_{ i + 1 } } \arrow[d, "F^{\text{t}}"] \\
